--- a/js-objecten/index.html
+++ b/js-objecten/index.html
@@ -7,11 +7,10 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="style.css">
-        <script src="data.js" defer></script>
-        <script src="data-uitvoer.js" defer></script>
     </head>
     <body>
         <h1 id="titel">Energie overzicht</h1>
+        <button id="haalJSON">haal json-data</button>
         <div id="uitvoerKop">
             <div class="tijd">Datum en tijd</div>
             <div>buiten</div>
@@ -23,5 +22,7 @@
         </div>
         <div id="uitvoer">script werkt nog niet</div>
         <img class="icons">
+        <script src="data.js" defer></script>
+        <script src="data-uitvoer.js" defer></script>
     </body>
 </html>
